fix text breaking on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -6,8 +6,8 @@ body {
   background-color: black;
 }
 h1 {
-  margin: 0;
   position: absolute;
+  width: 70%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
